removed dummy data and fixed remove button location

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </h4>
         <ul id="list-toDo" class="list-group list-group-flush">
           <li class="list-group-item">
-            <span class="badge badge-primary badge-pill">05/28/2020</span>
+            <span class="badge badge-primary badge-pill"></span>
             <p class="m-1"></p>
           </li>  
         </ul>
@@ -48,7 +48,7 @@
           </h4>
           <ul id="list-inProgress" class="list-group list-group-flush">
             <li class="list-group-item">
-              <span class="badge badge-primary badge-pill">05/28/2020</span>
+              <span class="badge badge-primary badge-pill"></span>
               <p class="m-1"></p>
             </li>
           </ul>
@@ -63,7 +63,7 @@
           </h4>
           <ul id="list-inReview" class="list-group list-group-flush">
             <li class="list-group-item">
-              <span class="badge badge-primary badge-pill">05/28/2020</span>
+              <span class="badge badge-primary badge-pill"></span>
               <p class="m-1"></p>
             </li>
           </ul>
@@ -78,7 +78,7 @@
           </h4>
           <ul id="list-done" class="list-group list-group-flush">
             <li class="list-group-item">
-              <span class="badge badge-primary badge-pill">05/28/2020</span>
+              <span class="badge badge-primary badge-pill"></span>
               <p class="m-1"></p>
             </li>
           </ul>
@@ -86,8 +86,8 @@
         </div>
         <!-- done end -->
       </div>
-      <div id="trash">
-        <div class="w-100 bg-danger p-3 text-center text-light display-4 mt-auto">
+      <div class="mt-auto" id="trash">
+        <div class="w-100 bg-danger p-3 text-center text-light display-4">
           Drop Here to Remove.
         </div>
       </div>
