fixed bug involving empty tasks appearing

--- a/index.html
+++ b/index.html
@@ -43,10 +43,6 @@
           To Do
         </h4>
         <ul id="list-toDo" class="list-group list-group-flush">
-          <li class="list-group-item">
-            <span class="badge badge-primary badge-pill"></span>
-            <p class="m-1"></p>
-          </li>  
         </ul>
           </div>
         </div>
@@ -58,10 +54,6 @@
             In Progress
           </h4>
           <ul id="list-inProgress" class="list-group list-group-flush">
-            <li class="list-group-item">
-              <span class="badge badge-primary badge-pill"></span>
-              <p class="m-1"></p>
-            </li>
           </ul>
         </div>
         </div>
@@ -73,10 +65,6 @@
             In Review
           </h4>
           <ul id="list-inReview" class="list-group list-group-flush">
-            <li class="list-group-item">
-              <span class="badge badge-primary badge-pill"></span>
-              <p class="m-1"></p>
-            </li>
           </ul>
         </div>
         </div>
@@ -88,16 +76,12 @@
             Done
           </h4>
           <ul id="list-done" class="list-group list-group-flush">
-            <li class="list-group-item">
-              <span class="badge badge-primary badge-pill"></span>
-              <p class="m-1"></p>
-            </li>
           </ul>
         </div>
         </div>
         <!-- done end -->
       </div>
-      <div class="mt-auto overflow-hidden" id="trash">
+      <div class="mt-auto" id="trash">
         <div class="w-100 p-3 text-center bottom-trash">
           <span class="oi oi-trash"></span>
           Drop Here to Remove.
